--- a/2024_05_08/자바스트림.md
+++ b/2024_05_08/자바스트림.md
@@ -1,4 +1,4 @@
-# 자바 스트림을 이용해보자
+# 자바 스트림과 JPQL 맵핑
 
 1. entity를 dto로 바꾸는 함수를 만든다
 
@@ -30,7 +30,7 @@ public class ChatGroup {
 }
 ```
 
-2.  stream, map과 익명함수를 통해 stream으로 수정후 collect()로 list로 변환하면 끝
+2. stream, map과 익명함수를 통해 stream으로 수정후 collect()로 list로 변환하면 끝
 
 ```java
 @Slf4j
@@ -54,16 +54,18 @@ public class ChatRoomServiceImpl implements ChatRoomService {
 
 
 
+아니 근데 다 하고 나니 jpql로 dto에 바로 맵핑할수 있다고한다
 
+userDTO 빌더 패턴을 만들고 맵핑
 
+```java
+@Query("SELECT new com.example.dto.UserDTO(u.id, u.username) FROM User u WHERE u.age > :age")
+List<UserDTO> findUsersByAgeGreaterThan(@Param("age") int age);
+```
 
+ 
 
+필요한 만큼만 받아오기때문에 쪼금더 빠르다. 성능 문제는 조인에서 좌우되기 때문
 
-
-
-
-
-
-
-
-
+`페치 조인은 엔티티와 관련된 연관 엔티티들을 즉시 로딩하여 SQL 조인을 통해 한 번에 모든 데이터를 가져옵니다. 이를 통해 지연 로딩으로 인한 추가적인 쿼리 호출을 방지하고 성능을 향상시킬 수 있습니다.`
+다음 프로젝트에 사용해 보자
