--- a/2024_06_28/kbs/프록시 리버스 로드밸런서.md
+++ b/2024_06_28/kbs/프록시 리버스 로드밸런서.md
@@ -12,17 +12,17 @@
 
 정적인 데이터인 경우 응답이 달라지지 않기 때문 유리
 
-
-
 익명성
 
 서버에서 받는 ip는 프록시 서버의 ip
 
 클라이언트의 ip주소를 숨길수 있다
 
+특정 인터넷 사이트 접속 차단 하는놈
 
+패킷 검열 
 
-
+접속 서버의 주소를 받아서 연결해준다
 
 #### Reverse proxy
 
@@ -32,10 +32,6 @@
 
 로드 밸런싱
 
-
-
-
-
 #### 로드 밸런싱
 
 부하분산 - 여러대의 서버가 분산 처리할수 있도록 요청을 나누어 주는 서비스
@@ -43,3 +39,73 @@
 L4 스위치 있다 -> ip/ port level에서
 
 L7- >  어플리케이션 레벨 -> url이나 쿼리 파람에 따라 로드밸런싱
+
+### NGINX
+
+고성능 http 웹서버(C 기반)
+
+메일 프록시 서버
+
+tcp/ udp 프록시 서버
+
+3rd 파티 모듈 지원(스트리밍?도 있다)
+
+css, image, js 같은 정적 컨텐츠 nginx에서 나머지는 웹서버에서 받아오면 빠르다
+
+두개의 프로세스로 구성 -> 마스터와 워커 프로세스 
+
+![](프록시%20리버스%20로드밸런서_assets/2024-06-28-23-38-23-image.png)
+
+마스터가 부모 워커가 자식 프로세스
+
+worker process 수는 설정 가능하다
+
+`ps aux --forst | grep nginx`
+
+#### 설정파일
+
+`/etc/nginx/nginx.conf`
+
+각설정은 세미클론으로 끝나야한다
+
+블럭 디렉티브와 심플 디렉티브
+
+##### 서버 블록
+
+서버의 기능을 설정하는 블록
+
+어떤 주소:포트롤 요청 받을지 결정
+
+<img src="프록시%20리버스%20로드밸런서_assets/2024-06-28-23-44-53-image.png" title="" alt="" width="344">
+
+```
+nginx -t --> 설정파일이 문법에 맞게 작성 되어있는지 검
+```
+
+##### 로케이션 블록
+
+요청 uri 분석하여 세부 설정
+
+<img src="프록시%20리버스%20로드밸런서_assets/2024-06-28-23-59-13-image.png" title="" alt="" width="290">
+
+서버 블록안에 로케이션 블록 설정 저장
+
+```nginx
+server {
+    listen *:80;
+    server_name "helloworld.com";
+
+    location / {
+        return 200 "prefix match";
+    }
+    location = a/ {
+        return 200 "exact match";
+    }
+
+```
+
+
+
+##### file return
+
+<img src="프록시%20리버스%20로드밸런서_assets/2024-06-29-00-14-40-image.png" title="" alt="" width="311">
